<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/til_reg_username"
        android:layout_gravity="center_horizontal"
        android:padding="60dp"
        android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/error_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/red"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_reg_username"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text" >

            <requestFocus />
        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_reg_username">
        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_label"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/sign_up"
            android:layout_below="@+id/til_reg_password"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_rect"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="register"
            android:text="@string/sign_up_label" />

    <Button
        android:id="@+id/signInButton"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:background="@drawable/btn_rect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showLogin"
        android:text="@string/already_have_an_account_label" />

</RelativeLayout>